--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
@@ -20,6 +21,8 @@
     "@tanstack/react-query": "^5.90.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "immer": "^9.0.21",
+    "konva": "^8.4.3",
     "lucide-react": "^0.562.0",
     "moment": "^2.30.1",
     "react": "^19.2.0",
@@ -28,7 +31,9 @@
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "use-image": "^1.1.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
